[gd_scene load_steps=19 format=3 uid="uid://c4jcyq4x5dq51"]

[ext_resource type="Theme" uid="uid://bl4v2v143rihi" path="res://Theme/Background.tres" id="1_aejav"]
[ext_resource type="Script" path="res://Hud/Menu/menu.gd" id="1_rhx82"]
[ext_resource type="Theme" uid="uid://8dmfgxdrr5yh" path="res://Theme/Title.tres" id="3_b7dtb"]
[ext_resource type="PackedScene" uid="uid://cb3ej8nlybhvm" path="res://Hud/icon_button.tscn" id="4_2rvg6"]
[ext_resource type="Theme" uid="uid://b8t7tkhvril5g" path="res://Theme/Standard.tres" id="5_sls7b"]
[ext_resource type="PackedScene" uid="uid://c0518n1uf8jt2" path="res://Hud/text_button.tscn" id="6_btu12"]
[ext_resource type="Texture2D" uid="uid://cya8ro2s324t3" path="res://Sprites/Hud/Save.png" id="7_aield"]
[ext_resource type="Theme" uid="uid://dt7rd31blnvth" path="res://Theme/Invis.tres" id="8_l68ff"]
[ext_resource type="Texture2D" uid="uid://bvb4ehu30w7iu" path="res://Sprites/Hud/Options.png" id="9_r2mwg"]
[ext_resource type="Texture2D" uid="uid://bqdnbs21rmkig" path="res://Sprites/Hud/Stats.png" id="10_0vo15"]
[ext_resource type="Texture2D" uid="uid://dlt8c53eja853" path="res://Sprites/Hud/New Game.png" id="10_h1815"]
[ext_resource type="Texture2D" uid="uid://dpest0qdhsgcn" path="res://Sprites/Hud/PatchNotes.png" id="11_76i2p"]
[ext_resource type="Texture2D" uid="uid://dum715xqonouw" path="res://Sprites/Hud/Hint.png" id="12_vsb7i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gwfyw"]
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
shadow_color = Color(1, 0, 0.235294, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s67hr"]
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 1)
draw_center = false
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
shadow_color = Color(0.8, 0.8, 0.8, 0.298039)
shadow_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7dt1a"]
bg_color = Color(0, 0, 0, 0.501961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gwhj1"]
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
shadow_color = Color(0.8, 0.8, 0.8, 0.298039)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kjkp8"]
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 1)
draw_center = false
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
shadow_color = Color(0.8, 0.8, 0.8, 0.298039)
shadow_size = 8

[node name="Menu" type="MarginContainer"]
custom_minimum_size = Vector2(0, 256)
offset_right = 164.0
offset_bottom = 256.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_rhx82")

[node name="bg" type="Panel" parent="."]
layout_mode = 2
theme = ExtResource("1_aejav")
theme_override_styles/panel = SubResource("StyleBoxFlat_gwfyw")

[node name="bg shadow" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_aejav")
theme_override_styles/panel = SubResource("StyleBoxFlat_s67hr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="title bg" type="Panel" parent="VBoxContainer/MarginContainer"]
unique_name_in_owner = true
modulate = Color(1, 0, 0.235294, 1)
layout_mode = 2
theme = ExtResource("3_b7dtb")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="Title" type="RichTextLabel" parent="VBoxContainer/MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_b7dtb")
bbcode_enabled = true
text = "LORED"
fit_content = true
autowrap_mode = 0

[node name="Game Version" type="RichTextLabel" parent="VBoxContainer/MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_b7dtb")
bbcode_enabled = true
text = "[i]1.2.3"
fit_content = true
autowrap_mode = 0

[node name="Hamburger" parent="VBoxContainer/MarginContainer" instance=ExtResource("4_2rvg6")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="Content" type="MarginContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="game Content" type="MarginContainer" parent="VBoxContainer/Content"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Content/game Content"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/Content/game Content/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("5_sls7b")
text = "Difficulty: Normal"
fit_content = true

[node name="RichTextLabel3" type="RichTextLabel" parent="VBoxContainer/Content/game Content/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("5_sls7b")
text = "Session Count: 3
Session duration: 14m
Total duration: 14m"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Content/game Content/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Discord" parent="VBoxContainer/Content/game Content/VBoxContainer/HBoxContainer" instance=ExtResource("6_btu12")]
unique_name_in_owner = true
modulate = Color(0.376471, 0.741176, 0.992157, 1)
layout_mode = 2

[node name="Godot" parent="VBoxContainer/Content/game Content/VBoxContainer/HBoxContainer" instance=ExtResource("6_btu12")]
unique_name_in_owner = true
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="VBoxContainer/Content/game Content/VBoxContainer"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("5_sls7b")
bbcode_enabled = true
text = "[center][i]LORED is developed by [color=#ff003c]Drillur[/color] using the Godot Engine. Thanks for playing the game!"
fit_content = true

[node name="save Content" type="MarginContainer" parent="VBoxContainer/Content"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Content/save Content"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Save Name Label" type="RichTextLabel" parent="VBoxContainer/Content/save Content/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("5_sls7b")
bbcode_enabled = true
text = "[i]Drillur.lored"
fit_content = true
autowrap_mode = 0

[node name="Last Save Clock" type="RichTextLabel" parent="VBoxContainer/Content/save Content/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("5_sls7b")
bbcode_enabled = true
text = "[b]24 seconds[/b] since last save!"
fit_content = true
autowrap_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Content/save Content/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Save Now Button" parent="VBoxContainer/Content/save Content/VBoxContainer/HBoxContainer" instance=ExtResource("4_2rvg6")]
unique_name_in_owner = true
layout_mode = 2

[node name="Autosave option" type="CheckBox" parent="VBoxContainer/Content/save Content/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme = ExtResource("5_sls7b")
button_pressed = true
text = "Autosave"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Content/save Content/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/Content/save Content/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="New Game Button" parent="VBoxContainer/Content/save Content/VBoxContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("4_2rvg6")]
unique_name_in_owner = true
layout_mode = 2

[node name="Load Now Button" parent="VBoxContainer/Content/save Content/VBoxContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("4_2rvg6")]
unique_name_in_owner = true
layout_mode = 2

[node name="Export Button" parent="VBoxContainer/Content/save Content/VBoxContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("4_2rvg6")]
unique_name_in_owner = true
layout_mode = 2

[node name="Hard Reset Button" parent="VBoxContainer/Content/save Content/VBoxContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("4_2rvg6")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/Content/save Content/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="Color Button" parent="VBoxContainer/Content/save Content/VBoxContainer/VBoxContainer/HBoxContainer3" instance=ExtResource("4_2rvg6")]
unique_name_in_owner = true
layout_mode = 2

[node name="Rename Button" parent="VBoxContainer/Content/save Content/VBoxContainer/VBoxContainer/HBoxContainer3" instance=ExtResource("4_2rvg6")]
unique_name_in_owner = true
layout_mode = 2

[node name="Duplicate Button" parent="VBoxContainer/Content/save Content/VBoxContainer/VBoxContainer/HBoxContainer3" instance=ExtResource("4_2rvg6")]
unique_name_in_owner = true
layout_mode = 2

[node name="Delete Button" parent="VBoxContainer/Content/save Content/VBoxContainer/VBoxContainer/HBoxContainer3" instance=ExtResource("4_2rvg6")]
unique_name_in_owner = true
layout_mode = 2

[node name="Navigation" type="Control" parent="."]
unique_name_in_owner = true
visible = false
clip_contents = true
layout_mode = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="fade" type="Panel" parent="Navigation"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7dt1a")

[node name="MarginContainer" type="MarginContainer" parent="Navigation"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 124.0
grow_vertical = 2

[node name="option bg" type="Panel" parent="Navigation/MarginContainer"]
layout_mode = 2
theme = ExtResource("1_aejav")
theme_override_styles/panel = SubResource("StyleBoxFlat_gwhj1")

[node name="option bg shadow" type="Panel" parent="Navigation/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_aejav")
theme_override_styles/panel = SubResource("StyleBoxFlat_kjkp8")

[node name="VBoxContainer" type="VBoxContainer" parent="Navigation/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Title" type="MarginContainer" parent="Navigation/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2

[node name="option title bg" type="Panel" parent="Navigation/MarginContainer/VBoxContainer/Title"]
unique_name_in_owner = true
modulate = Color(1, 0, 0.235294, 1)
layout_mode = 2
theme = ExtResource("3_b7dtb")

[node name="Hamburger2" parent="Navigation/MarginContainer/VBoxContainer/Title" instance=ExtResource("4_2rvg6")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="MarginContainer2" type="MarginContainer" parent="Navigation/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="MarginContainer" type="MarginContainer" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="Nav Save Icon" type="TextureRect" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.384314, 0.603922, 0.270588, 1)
layout_mode = 2
texture = ExtResource("7_aield")

[node name="TextureRect2" type="TextureRect" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer/MarginContainer/HBoxContainer/Nav Save Icon"]
modulate = Color(0, 0, 0, 1)
show_behind_parent = true
layout_mode = 2
offset_left = 1.0
offset_top = 1.0
offset_right = 25.0
offset_bottom = 25.0
texture = ExtResource("7_aield")

[node name="RichTextLabel" type="RichTextLabel" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_sls7b")
bbcode_enabled = true
text = "Save/Load"
fit_content = true
autowrap_mode = 0

[node name="SaveButton" type="Button" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("8_l68ff")

[node name="MarginContainer7" type="MarginContainer" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="MarginContainer" type="MarginContainer" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer7"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer7/MarginContainer"]
layout_mode = 2

[node name="Nav Save Icon" type="TextureRect" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer7/MarginContainer/HBoxContainer"]
modulate = Color(0.384314, 0.603922, 0.270588, 1)
layout_mode = 2
texture = ExtResource("7_aield")

[node name="TextureRect2" type="TextureRect" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer7/MarginContainer/HBoxContainer/Nav Save Icon"]
modulate = Color(0, 0, 0, 1)
show_behind_parent = true
layout_mode = 2
offset_left = 1.0
offset_top = 1.0
offset_right = 25.0
offset_bottom = 25.0
texture = ExtResource("7_aield")

[node name="RichTextLabel" type="RichTextLabel" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer7/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_sls7b")
bbcode_enabled = true
text = "Load"
fit_content = true
autowrap_mode = 0

[node name="LoadButton" type="Button" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer7"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("8_l68ff")

[node name="MarginContainer2" type="MarginContainer" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="MarginContainer" type="MarginContainer" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer2/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer2/MarginContainer/HBoxContainer"]
modulate = Color(0.137255, 0.698039, 0.552941, 1)
layout_mode = 2
texture = ExtResource("9_r2mwg")

[node name="TextureRect2" type="TextureRect" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer2/MarginContainer/HBoxContainer/TextureRect"]
modulate = Color(0, 0, 0, 1)
show_behind_parent = true
layout_mode = 2
offset_left = 1.0
offset_top = 1.0
offset_right = 25.0
offset_bottom = 25.0
texture = ExtResource("9_r2mwg")

[node name="RichTextLabel" type="RichTextLabel" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_sls7b")
bbcode_enabled = true
text = "Options"
fit_content = true
autowrap_mode = 0

[node name="OptionsButton" type="Button" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("8_l68ff")

[node name="MarginContainer6" type="MarginContainer" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="MarginContainer" type="MarginContainer" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer6"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer6/MarginContainer"]
layout_mode = 2

[node name="Nav Save Icon" type="TextureRect" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer6/MarginContainer/HBoxContainer"]
modulate = Color(1, 0, 0.235294, 1)
layout_mode = 2
texture = ExtResource("10_h1815")

[node name="TextureRect2" type="TextureRect" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer6/MarginContainer/HBoxContainer/Nav Save Icon"]
modulate = Color(0, 0, 0, 1)
show_behind_parent = true
layout_mode = 2
offset_left = 1.0
offset_top = 1.0
offset_right = 25.0
offset_bottom = 25.0
texture = ExtResource("10_h1815")

[node name="RichTextLabel" type="RichTextLabel" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer6/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_sls7b")
bbcode_enabled = true
text = "New Game"
fit_content = true
autowrap_mode = 0

[node name="NavNewGameButton" type="Button" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer6"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("8_l68ff")

[node name="MarginContainer3" type="MarginContainer" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="MarginContainer" type="MarginContainer" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer3/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer3/MarginContainer/HBoxContainer"]
modulate = Color(0.74902, 0.639216, 0.0352941, 1)
layout_mode = 2
texture = ExtResource("10_0vo15")

[node name="TextureRect2" type="TextureRect" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer3/MarginContainer/HBoxContainer/TextureRect"]
modulate = Color(0, 0, 0, 1)
show_behind_parent = true
layout_mode = 2
offset_left = 1.0
offset_top = 1.0
offset_right = 25.0
offset_bottom = 25.0
texture = ExtResource("10_0vo15")

[node name="RichTextLabel" type="RichTextLabel" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer3/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_sls7b")
bbcode_enabled = true
text = "Statistics"
fit_content = true
autowrap_mode = 0

[node name="StatsButton" type="Button" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer3"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("8_l68ff")

[node name="MarginContainer4" type="MarginContainer" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="MarginContainer" type="MarginContainer" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer4"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer4/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer4/MarginContainer/HBoxContainer"]
modulate = Color(0.996078, 0.443137, 0.172549, 1)
layout_mode = 2
texture = ExtResource("11_76i2p")

[node name="TextureRect2" type="TextureRect" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer4/MarginContainer/HBoxContainer/TextureRect"]
modulate = Color(0, 0, 0, 1)
show_behind_parent = true
layout_mode = 2
offset_left = 1.0
offset_top = 1.0
offset_right = 25.0
offset_bottom = 25.0
texture = ExtResource("11_76i2p")

[node name="RichTextLabel" type="RichTextLabel" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer4/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_sls7b")
bbcode_enabled = true
text = "Patch Notes"
fit_content = true
autowrap_mode = 0

[node name="PatchButton" type="Button" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer4"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("8_l68ff")

[node name="MarginContainer5" type="MarginContainer" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="MarginContainer" type="MarginContainer" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer5"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer5/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer5/MarginContainer/HBoxContainer"]
modulate = Color(0.964706, 0.521569, 1, 1)
layout_mode = 2
texture = ExtResource("12_vsb7i")

[node name="TextureRect2" type="TextureRect" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer5/MarginContainer/HBoxContainer/TextureRect"]
modulate = Color(0, 0, 0, 1)
show_behind_parent = true
layout_mode = 2
offset_left = 1.0
offset_top = 1.0
offset_right = 25.0
offset_bottom = 25.0
texture = ExtResource("12_vsb7i")

[node name="RichTextLabel" type="RichTextLabel" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer5/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_sls7b")
bbcode_enabled = true
text = "Help"
fit_content = true
autowrap_mode = 0

[node name="HelpButton" type="Button" parent="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer5"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("8_l68ff")

[node name="Control" type="Control" parent="."]
layout_mode = 2
mouse_filter = 2
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Right" type="Control" parent="Control"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 264.0
offset_top = -10.0
offset_right = 264.0
offset_bottom = -10.0

[connection signal="gui_input" from="Navigation/fade" to="." method="_on_fade_gui_input"]
[connection signal="pressed" from="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer7/LoadButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Navigation/MarginContainer/VBoxContainer/MarginContainer2/VBoxContainer2/MarginContainer6/NavNewGameButton" to="." method="_on_save_button_pressed"]
